--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>pimentinha</h1> 
-   
+    <header>
+        <h1>pimentinha</h1> 
+
+
+    </header>
+
 </body>
 </html>
