--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </header>
    <section class="escola">
     <div class="escola-div-conteudo">
-        <h2 class="escola-titulo">Sobre a pimenta</h2>
-        <p class="escola-texto-um">A biquinho começou a ser comercializada no Triângulo Mineiro, no início da década de 2000, mas hoje pode ser encontrada em todo o território nacional.</p>
-        <p class="escola-texto-dois"> Também chamada pimenta de bico, ela pertence à mesma espécie das pimentas habanero, de-cheiro, bode, cumari-do-Pará e murupi. Todas essas pimentas são muito aromáticas e saborosas, mas o ardor pode ser bem suave (leve), como na biquinho ou muito picante (intenso) como na habanero.</p>
+        <h2 class="escola-titulo">SOBRE A PIMENTA BIQUINHO</h2>
+        <p class="escola-texto-um">𝗔 𝗯𝗶𝗾𝘂𝗶𝗻𝗵𝗼 𝗰𝗼𝗺𝗲𝗰̧𝗼𝘂 𝗮 𝘀𝗲𝗿 𝗰𝗼𝗺𝗲𝗿𝗰𝗶𝗮𝗹𝗶𝘇𝗮𝗱𝗮 𝗻𝗼 𝗧𝗿𝗶𝗮̂𝗻𝗴𝘂𝗹𝗼 𝗠𝗶𝗻𝗲𝗶𝗿𝗼, 𝗻𝗼 𝗶𝗻𝗶́𝗰𝗶𝗼 𝗱𝗮 𝗱𝗲́𝗰𝗮𝗱𝗮 𝗱𝗲 𝟮𝟬𝟬𝟬, 𝗺𝗮𝘀 𝗵𝗼𝗷𝗲 𝗽𝗼𝗱𝗲 𝘀𝗲𝗿 𝗲𝗻𝗰𝗼𝗻𝘁𝗿𝗮𝗱𝗮 𝗲𝗺 𝘁𝗼𝗱𝗼 𝗼 𝘁𝗲𝗿𝗿𝗶𝘁𝗼́𝗿𝗶𝗼 𝗻𝗮𝗰𝗶𝗼𝗻𝗮𝗹.</p>
+        <p class="escola-texto-dois"> 𝗧𝗮𝗺𝗯𝗲́𝗺 𝗰𝗵𝗮𝗺𝗮𝗱𝗮 𝗽𝗶𝗺𝗲𝗻𝘁𝗮 𝗱𝗲 𝗯𝗶𝗰𝗼, 𝗲𝗹𝗮 𝗽𝗲𝗿𝘁𝗲𝗻𝗰𝗲 𝗮̀ 𝗺𝗲𝘀𝗺𝗮 𝗲𝘀𝗽𝗲́𝗰𝗶𝗲 𝗱𝗮𝘀 𝗽𝗶𝗺𝗲𝗻𝘁𝗮𝘀 𝗵𝗮𝗯𝗮𝗻𝗲𝗿𝗼, 𝗱𝗲-𝗰𝗵𝗲𝗶𝗿𝗼, 𝗯𝗼𝗱𝗲, 𝗰𝘂𝗺𝗮𝗿𝗶-𝗱𝗼-𝗣𝗮𝗿𝗮́ 𝗲 𝗺𝘂𝗿𝘂𝗽𝗶. 𝗧𝗼𝗱𝗮𝘀 𝗲𝘀𝘀𝗮𝘀 𝗽𝗶𝗺𝗲𝗻𝘁𝗮𝘀 𝘀𝗮̃𝗼 𝗺𝘂𝗶𝘁𝗼 𝗮𝗿𝗼𝗺𝗮́𝘁𝗶𝗰𝗮𝘀 𝗲 𝘀𝗮𝗯𝗼𝗿𝗼𝘀𝗮𝘀, 𝗺𝗮𝘀 𝗼 𝗮𝗿𝗱𝗼𝗿 𝗽𝗼𝗱𝗲 𝘀𝗲𝗿 𝗯𝗲𝗺 𝘀𝘂𝗮𝘃𝗲 (𝗹𝗲𝘃𝗲), 𝗰𝗼𝗺𝗼 𝗻𝗮 𝗯𝗶𝗾𝘂𝗶𝗻𝗵𝗼 𝗼𝘂 𝗺𝘂𝗶𝘁𝗼 𝗽𝗶𝗰𝗮𝗻𝘁𝗲 (𝗶𝗻𝘁𝗲𝗻𝘀𝗼) 𝗰𝗼𝗺𝗼 𝗻𝗮 𝗵𝗮𝗯𝗮𝗻𝗲𝗿𝗼.</p>
     </div>
 </section>
 </body>
