--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
 <body>
     <header class="cabecalho">
        <h1>PIMENTA BIQUINHO</h1>
+       <nav>
        <ul class="cabacalho-lista">
-        <li class="cabecalho-lista-item">Escola</li>
+        <a href="pimenta.html">
+        <li class="cabecalho-lista-item">Pimenta</li>
+        </a>
         <li class="cabecalho-lista-item">Estudante</li>
        </ul>
+    </nav>
     </header>
    <section class="escola">
     <div class="escola-div-conteudo">
